# streaming_similarity

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: X_cast.parquet  X_cast_meta.json  X_core.parquet  X_core_meta.json  catalog.parquet  cluster_summary.csv  clusters_kmeans_k12.parquet  run_config.json
notebooks/: 01_build_catalog.ipynb  02_exploration.ipynb  03_feature_engineering.ipynb  04_clustering.ipynb
outputs/tables/: cluster_examples.csv
src/: clustering.py  data_loader.py  feature_engineering.py  pipeline.py  similarity.py
src/data/: build_catalog.py
streaming_similarity.egg-info/: PKG-INFO  SOURCES.txt
